# loki

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  clippy.toml  diff_flow.txt  scratch.rs  test_log.txt  test_log_utf8.txt  test_output.txt  test_output_utf8.txt
appthere-canvas/: Cargo.toml
appthere-canvas/src/: blit.rs  font_cache.rs  key.rs  lib.rs  scroll.rs  source.rs  texture.rs
appthere-conformance/: Cargo.toml
appthere-conformance/examples/: rasterize_pdf.rs
appthere-conformance/goldens/: CALIBRATION.md
appthere-conformance/schemas/: README.md
appthere-conformance/src/: lib.rs  raster.rs  raster_tests.rs
appthere-ui/: Cargo.toml
appthere-ui/src/: lib.rs  safe_area.rs  theme.rs  theme_tests.rs
loki-acid/: Cargo.toml  README.md  TEST_PLAN.md
loki-acid/assets/: acid2-docx.docx  acid_docx.docx  acid_odg.odg  acid_odp.odp  acid_ods.ods  acid_odt.odt  acid_pptx.pptx  acid_xlsx.xlsx
loki-acid/examples/: acid_report.rs  gen_acid2_docx.rs  gen_acid_pptx.rs  load_bench.rs  relayout_bench.rs  render_acid_pdf.rs
loki-acid/goldens/: README.md
loki-acid/src/: diff.rs  fixtures.rs  golden.rs  lib.rs  pages.rs  report.rs  severity.rs
loki-acid/tests/: acid2_word_valid.rs  golden_pixel.rs  structural.rs
loki-app-shell/: Cargo.toml
loki-app-shell/src/: android.rs  app_data.rs  lib.rs  new_document.rs  recent_documents.rs  tabs.rs  tabs_tests.rs  untitled.rs  window_geometry.rs
loki-basic/: Cargo.toml
loki-basic/fuzz/: .gitignore  Cargo.toml
loki-basic/src/: dialect.rs  error.rs  host.rs  lib.rs
loki-basic/tests/: class_tests.rs  fuzz_smoke.rs  host_tests.rs  interp_tests.rs  parse_tests.rs  refusal_tests.rs  value_tests.rs
loki-bench/: Cargo.toml  README.md
loki-bench/baselines/: parity_marker.txt  portable.txt  rss_budgets.txt
loki-bench/benches/: arc_steady_state.rs  baseline.rs  device_frame_time.rs  device_rss.rs  font_cache_dedup.rs  leak_detection.rs  leak_loro_history.rs  parity_status.rs  portable_alloc.rs  portable_export.rs  portable_io.rs  portable_layout.rs  portable_model.rs  portable_smoke.rs  portable_span_density.rs  portable_style_resolution.rs  session_layout_residual.rs
loki-bench/src/: axis.rs  axis_tests.rs  baseline.rs  baseline_tests.rs  budget.rs  budget_tests.rs  leak.rs  leak_tests.rs  lib.rs  memory.rs  memory_tests.rs  parity.rs  parity_tests.rs  rss.rs  rss_tests.rs
loki-convert/: Cargo.toml
loki-convert/src/: error.rs  format.rs  lib.rs  matrix.rs  pipeline.rs
loki-convert/tests/: matrix_round_trips.rs
loki-crypto/: Cargo.toml
loki-crypto/src/: aead_wrap.rs  dek.rs  error.rs  lib.rs  wrap.rs  x25519_wrap.rs  x25519_wrap_tests.rs
loki-doc-model/: Cargo.toml
loki-doc-model/src/: document.rs  document_paper.rs  document_tests.rs  error.rs  lib.rs  loro_bridge.rs  loro_mutation.rs  loro_schema.rs  settings.rs
loki-doc-model/tests/: block_alignment.rs  loro_bridge_compact_tests.rs  loro_bridge_container_tests.rs  loro_bridge_gap_tests.rs  loro_bridge_inline_tail_tests.rs  loro_bridge_note_tests.rs  loro_bridge_opaque_tests.rs  loro_bridge_table_tests.rs  loro_bridge_tests.rs  loro_concurrency_tests.rs  loro_mutation_insert_tests.rs  loro_mutation_nested_tests.rs  loro_mutation_tests.rs  loro_nested_revision_tests.rs  loro_para_mark_revision_tests.rs  loro_per_change_revision_tests.rs  loro_selection_delete_tests.rs  loro_styles_round_trip.rs  loro_tracked_selection_tests.rs  page_columns.rs  page_margins.rs  page_orientation.rs  page_size.rs  page_style_geometry.rs  page_style_model.rs  revision_roundtrip.rs  table_structural_ops.rs
loki-epub/: Cargo.toml
loki-epub/src/: container.rs  content.rs  content_tests.rs  error.rs  images.rs  inlines.rs  lib.rs  nav.rs  opf_meta.rs  package.rs  tables.rs  tables_tests.rs  xml.rs
loki-epub/tests/: epub_structure.rs
loki-fonts/: Cargo.toml
loki-fonts/src/: lib.rs
loki-graphics/: Cargo.toml
loki-graphics/src/: drawing.rs  geometry.rs  id.rs  lib.rs  path.rs  preset.rs  shape.rs  style.rs  text.rs
loki-headless/: Cargo.toml
loki-headless/src/: cli.rs  commands.rs  main.rs
loki-headless/tests/: cli.rs
loki-i18n/: Cargo.toml
loki-i18n/src/: embed.rs  lib.rs  loader.rs
loki-layout/: Cargo.toml
loki-layout/benches/: edit_path.rs  layout_scaling.rs
loki-layout/examples/: layout_report.rs
loki-layout/src/: color.rs  error.rs  flow.rs  flow_balance.rs  flow_block.rs  flow_columns.rs  flow_comments.rs  flow_dispatch.rs  flow_editing.rs  flow_entry.rs  flow_float.rs  flow_float_tests.rs  flow_group.rs  flow_headers.rs  flow_helpers.rs  flow_line_numbers.rs  flow_list_marker.rs  flow_page_fields.rs  flow_para.rs  flow_para_between.rs  flow_para_chain.rs  flow_para_place.rs  flow_run.rs  flow_split.rs  flow_table.rs  flow_table_autofit.rs  flow_table_autofit_tests.rs  flow_table_cells.rs  flow_table_chars.rs  flow_table_decor.rs  flow_table_geom.rs  flow_table_main.rs  flow_table_measure.rs  flow_table_paint.rs  flow_tail.rs  flow_tests.rs  flow_textbox.rs  flow_widow_orphan.rs  flow_widow_orphan_tests.rs  font.rs  (+47 more)
loki-layout/tests/: font_substitution_suite.rs  footnote_editing_tests.rs  hanging_indent_tests.rs  kerning_applied.rs  multi_section_tests.rs  tab_no_overshoot.rs  tab_stops_tests.rs  table_cell_editing_tests.rs  table_rotation_tests.rs  table_tests.rs  ui_font_registration.rs  variable_font_weight.rs
loki-macro-host/: Cargo.toml
loki-macro-host/src/: broker.rs  broker_tests.rs  capability.rs  capability_tests.rs  error.rs  events.rs  file.rs  file_tests.rs  http.rs  http_tests.rs  lib.rs  net.rs  net_fetch.rs  net_policy.rs  net_policy_tests.rs  net_tests.rs  runtime.rs  verify.rs  verify_tests.rs
loki-macro-sig/: Cargo.toml
loki-model/: Cargo.toml
loki-odf/: Cargo.toml
loki-ooxml/: Cargo.toml
loki-opc/: Cargo.toml  LICENSE
loki-pdf/: Cargo.toml
loki-presentation/: AndroidManifest.xml  Cargo.toml  Dioxus.toml  build.rs
loki-presentation-model/: Cargo.toml
loki-primitives/: Cargo.toml
loki-print/: Cargo.toml
loki-render-cache/: Cargo.toml
loki-render-cpu/: Cargo.toml
(+1438 files in other folders)
