[workspace]
resolver = "3"
members = ["loki-doc-model","loki-sheet-model","loki-opc","loki-primitives","loki-ooxml","loki-odf","loki-layout","loki-vello","appthere-ui","loki-app-shell","loki-text","loki-spreadsheet","loki-presentation","loki-render-cache","loki-renderer","loki-i18n","appthere-canvas","loki-fonts","loki-graphics","loki-presentation-model","loki-epub","loki-pdf","loki-acid","loki-templates"]

[workspace.dependencies]
# Shared across appthere-ui and any other workspace member that needs Dioxus.
#
# PINNED to =0.7.9 (do not loosen to "0.7"): the `[patch.crates-io]` entries
# below vendor `dioxus-native` / `dioxus-native-dom` at 0.7.9 (they implement
# the scroll-event dispatch and `MountedData::scroll` the editor's scrollbar
# relies on, plus onmounted/touch/composition support). A caret "0.7" req lets
# the resolver pick a newer 0.7.x from crates.io, which silently drops those
# patches ("Patch ... was not used") and breaks scrolling/drag. When bumping,
# re-vendor the two patches: their upstream `src/` was byte-identical 0.7.4→0.7.9,
# so re-vendoring was only a manifest version bump — re-check that on the next bump.
dioxus    = { version = "=0.7.9", features = ["native"] }
thiserror = "2"
appthere-canvas = { path = "appthere-canvas", features = ["gpu", "font-cache"] }
loki-file-access = { git = "https://github.com/appthere/loki-file-access", branch = "main" }
loki-fonts = { path = "loki-fonts" }
android-activity = "0.6"

[patch.crates-io]
# PATCH: vendors dioxus-native-dom to avoid runtime unimplemented!() panics in
# HtmlEventConverter (composition, touch, scroll, etc.) — remove when upstream
# implements the converters Loki requires. See docs/patches.md.
dioxus-native-dom = { path = "patches/dioxus-native-dom" }

# PATCH: handle_click walks up the DOM but calls clear_focus() for any element
# that isn't input/label/a — so clicking a wgpu canvas clears keyboard focus
# from the nearest tabindex="0" ancestor div, preventing onkeydown from firing.
# Fix: check is_focussable() after the match arm and call set_focus_to() instead
# of continuing up.  Remove when upstream blitz-dom makes tabindex focus
# on click work for non-input elements.
blitz-dom = { path = "patches/blitz-dom" }

# PATCH: forwards WindowEvent::Touch to Dioxus touch handlers.
# Remove when blitz-shell implements touch natively. See docs/patches.md.
blitz-shell = { path = "patches/blitz-shell" }

# PATCH: default reqwest features pull in native-tls → libssl.so, which is
# absent on Android, causing an UnsatisfiedLinkError at launch.  This patch
# switches reqwest to rustls-tls-webpki-roots (pure Rust, no system OpenSSL).
# Remove when blitz-net upstream switches to rustls or makes TLS a feature flag.
blitz-net = { path = "patches/blitz-net" }

# PATCH: Mali GPU drivers (Pixel 9 / Mali-G715 r54p2) lose the Vulkan device
# when Vello compiles shader modules from multiple threads concurrently.
# Forces num_init_threads = 1 on Android (upstream only does this for macOS).
# Remove when anyrender_vello applies the Android workaround upstream.
anyrender_vello = { path = "patches/anyrender_vello" }

# PATCH: CreateHeadElement user events apply CSS but never call request_redraw(),
# leaving the screen blank on Android where the OS does not post an automatic
# RedrawRequested after resumed() (unlike desktop).  Fix: call request_redraw()
# after each CreateHeadElement is processed.  Remove when upstream dioxus-native
# handles the redraw itself.
dioxus-native = { path = "patches/dioxus-native" }

[patch."https://github.com/appthere/loki-file-access"]
# PATCH: fixes two Android bugs —
# (1) ndk_context stores Application (not Activity); startActivityForResult needs
#     the actual NativeActivity, obtained via AndroidApp::activity_as_ptr().
# (2) ANativeActivityCallbacks has no onActivityResult; returns a clear error
#     instead of hanging indefinitely, and exports the JNI hook for the future
#     Gradle-based FilePickerActivity shim.
loki-file-access = { path = "patches/loki-file-access" }

# ── Build profiles ─────────────────────────────────────────────────────────────
#
# The unoptimized debug profile embeds full DWARF symbols for every dependency.
# wgpu + stylo + vello + parley together produce a 700+ MB .so in debug mode.
# Stripping debug info from external crates brings Android APK size to <100 MB
# while keeping full debuggability for workspace crates.
#
# opt-level = 1 on dependencies also speeds up runtime significantly (wgpu,
# stylo, and vello are nearly unusable at opt-level = 0 on device).

[profile.dev.package."*"]
debug = false    # no DWARF for third-party crates — biggest size win
opt-level = 1   # single-pass codegen; improves rendering performance in dev

[profile.dev]
debug = true     # full debug info retained for workspace crates
opt-level = 0   # fast incremental recompile for your own code
