[package]
name        = "appthere-canvas"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Generic GPU canvas infrastructure for AppThere applications"

[features]
default    = []
gpu        = ["dep:wgpu"]
dioxus     = ["dep:dioxus", "dep:tokio"]
font-cache = ["dep:peniko"]

[dependencies]
thiserror = "2"
tracing   = "0.1"
wgpu      = { version = "26", optional = true }
dioxus    = { version = "0.7", features = ["native"], optional = true }
tokio     = { version = "1", features = ["time", "sync"], optional = true }
peniko    = { version = "0.5", optional = true }
