[package]
name        = "appthere-canvas"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Generic GPU canvas infrastructure for AppThere applications"

[features]
default    = []
# The PageSource trait and GPU texture handle are provided by loki-render-cache
# (the canonical implementation); `gpu` forwards to its wgpu-backed utilities.
gpu        = ["loki-render-cache/gpu"]
font-cache = ["dep:peniko"]

[dependencies]
loki-render-cache = { path = "../loki-render-cache", default-features = false }
peniko    = { version = "0.5", optional = true }
read-fonts = "0.40"
