[package]
name = "appthere-conformance"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared conformance-testing harness (schema validation, round-trip stability, visual goldens) for the AppThere Loki suite — Spec 02"
repository = "https://github.com/appthere/loki"
keywords = ["conformance", "testing", "ooxml", "odf", "loki"]
categories = ["development-tools::testing"]

[features]
default = []
# Adds the `model` adapter: `NormalizedModel` for the suite's format-neutral
# `loki_doc_model::Document`, so the round-trip axis works on real documents.
doc-model = ["dep:loki-doc-model"]
# Adds the `sheet` adapter: `NormalizedModel` for `loki_sheet_model::Workbook`,
# so the round-trip axis works on spreadsheets (XLSX / ODS).
sheet-model = ["dep:loki-sheet-model"]

[dependencies]
thiserror = { workspace = true }
# Round-trip the candidate XML through a temp file for `xmllint` validation.
tempfile = "3"
# PNG decode/encode for the visual-goldens differ and heatmap emission.
image = { version = "0.25", default-features = false, features = ["png"] }
# Optional: the format-neutral document model, for the round-trip canonicalizer.
loki-doc-model = { path = "../loki-doc-model", optional = true }
# Optional: the spreadsheet model, for the workbook round-trip canonicalizer.
loki-sheet-model = { path = "../loki-sheet-model", optional = true }

[package.metadata.docs.rs]
all-features = true
