[package]
name = "loki-acid"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "ACID document-rendering fidelity test harness for the Loki suite"
repository = "https://github.com/appthere/loki"
publish = false

[dependencies]
loki-doc-model = { path = "../loki-doc-model" }
loki-ooxml = { path = "../loki-ooxml", features = ["docx", "xlsx", "pptx"] }
loki-odf = { path = "../loki-odf" }
loki-layout = { path = "../loki-layout" }
loki-sheet-model = { path = "../loki-sheet-model" }
loki-presentation-model = { path = "../loki-presentation-model" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
loki-doc-model = { path = "../loki-doc-model" }
# The `gen_acid_pptx` example builds the fixture from raw shapes.
loki-graphics = { path = "../loki-graphics", features = ["serde"] }
loki-presentation-model = { path = "../loki-presentation-model" }
loki-primitives = { path = "../loki-primitives" }
# The `render_acid_pdf` example renders fixtures to PDF for visual comparison.
loki-pdf = { path = "../loki-pdf" }
