[package]
name = "loki-doc-model"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Format-neutral document model for the Loki suite (text documents)"
repository = "https://github.com/appthere/loki"
keywords = ["document", "odf", "ooxml", "model", "loki"]
categories = ["data-structures", "encoding", "text-processing"]

[features]
default = []
serde = [
    "dep:serde",
    "dep:serde_json",
    "loki-primitives/serde",
    "appthere-color/serde",
    "chrono/serde",
    "indexmap/serde",
]

[dependencies]
loki-primitives = { path = "../loki-primitives" }
appthere-color = "0.1.1"
thiserror = "2"
indexmap = "2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dev-dependencies]
approx = "0.5"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
