[package]
name = "loki-headless"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Headless Loki worker/CLI: GPU-free printing and file conversion (headless spec C021-C028)"
repository = "https://github.com/appthere/loki"

[dependencies]
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
loki-convert = { workspace = true }
loki-print = { workspace = true }

[dev-dependencies]
loki-doc-model = { path = "../loki-doc-model" }
loki-ooxml = { path = "../loki-ooxml" }
