[package]
name = "loki-layout"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Renderer-agnostic layout engine for the Loki suite"
repository = "https://github.com/appthere/loki"
keywords = ["document", "layout", "text", "loki"]
categories = ["graphics", "text-processing"]

[dependencies]
loki-doc-model = { path = "../loki-doc-model" }
loki-primitives = { path = "../loki-primitives" }
appthere-color = "0.1.1"
parley = "0.8"
fontique = "0.8"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# Statistical benchmark harness (layout + edit-path scaling).
criterion = "0.5"
# Drives real CRDT mutations through the edit-path benchmark / report.
loro = "1.11.1"

[[bench]]
name = "layout_scaling"
harness = false

[[bench]]
name = "edit_path"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
