[package]
name = "loki-layout"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Renderer-agnostic layout engine for the Loki suite"
repository = "https://github.com/appthere/loki"
keywords = ["document", "layout", "text", "loki"]
categories = ["graphics", "text-processing"]

[dependencies]
loki-doc-model = { path = "../loki-doc-model" }
loki-primitives = { path = "../loki-primitives" }
appthere-color = "0.1.1"
parley = "0.10"
# Force fontconfig-dlopen so fontique loads libfontconfig at runtime instead of
# requiring static C symbols at link time. This must be enabled wherever fontique
# is pulled (parley re-exports it) so crates that build without the blitz stack in
# their graph (e.g. loki-vello) still link — blitz-dom otherwise enables
# yeslogic-fontconfig-sys/dlopen globally, but it is not always present.
fontique = { version = "0.10", features = ["fontconfig-dlopen"] }
thiserror = "2"
tracing = "0.1"

# Android only: the bundled metric-compatible fallback fonts (Carlito/Caladea/
# Arimo/Cousine/Tinos). On desktop these are discovered from the executable's
# `assets/fonts/` directory, but that path does not resolve on Android, so the
# bytes are registered directly in `FontResources::new`. Gated to the Android
# target so desktop builds neither depend on loki-fonts nor embed the ~7 MB.
[target.'cfg(target_os = "android")'.dependencies]
loki-fonts.workspace = true

[dev-dependencies]
# Statistical benchmark harness (layout + edit-path scaling).
criterion = "0.8"
# Drives real CRDT mutations through the edit-path benchmark / report.
loro = "1.11.1"

[[bench]]
name = "layout_scaling"
harness = false

[[bench]]
name = "edit_path"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
